<resources>
    <string name="app_name">Erb
        Azimuth</string>
    <string name="longitude">Longitude</string>
    <string name="azimute">Azimute</string>
    <string name="raio">Raio em metros</string>
    <string name="latitude">Latitude</string>
    <string name="clear">O que gostaria de apagar?</string>
    <string name="btnCancel">Cancelar</string>
    <string name="btnAll">Todos</string>
    <string name="btnLast">Último</string>
    <string name="Identificador">Identificador da ERB</string>
    <string name="Descricao">Descrição do azimute</string>
</resources>