<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/twTitulo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Adicionar Azimute"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAzimute"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/azimute"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/twTitulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAzimuteDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRaio"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/raio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAzimute">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRaioDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/twoptional"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Opcional"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilRaio" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiDescricao"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/Descricao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/twoptional">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescricaoDialog"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:gravity="top|start"
                android:inputType="textMultiLine|textImeMultiLine|textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/twcor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Cor:"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tiDescricao"
            app:layout_constraintTop_toBottomOf="@id/tiDescricao" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/twcorViewAzimuth"
            android:layout_width="80dp"
            android:layout_height="15dp"
            android:layout_marginTop="9dp"
            android:background="@color/azul"
            android:text=""
            android:textAlignment="viewStart"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toEndOf="@+id/twcor"
            app:layout_constraintTop_toBottomOf="@+id/tiDescricao" />

        <TableLayout
            android:id="@+id/tlColorAzimuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:stretchColumns="*"
            app:layout_constraintStart_toStartOf="@+id/twcor"
            app:layout_constraintTop_toBottomOf="@+id/twcor">

            <TableRow android:gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/vermelho" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/roxo" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/azul" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/azulCeleste" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/verdeEscuro" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/verde" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/amarelo" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/dourado" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/laranja" />
            </TableRow>

        </TableLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/azul_bnt"
            android:text="Cancelar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlColorAzimuth" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/azul_bnt"
            android:text="Adicionar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlColorAzimuth" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
